fixed alignment on about page

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ section p {
 footer {
 	background-color: RGBA(76, 84, 84, 0.8);
 	padding: 10%;
+	margin-top: 10%;
 	color: RGBA(255, 113, 91, 0.75)
 }
 
@@ -227,6 +228,11 @@ i:hover {
 		margin-top: 10%;
 	}
 }
+
+	.about-person p {
+		margin: 0px -8px 5px 0px;
+	}
+
 
 @media (min-width: 1000px) {
 	header img {
